--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -10,6 +10,12 @@
 }
 
 
+@article{tordesillas2020minvo,
+  title={{MINVO} Basis: Finding Simplexes with Minimum Volume Enclosing Polynomial Curves},
+  author={Tordesillas, Jesus and How, Jonathan},
+  year={2019}
+}
+
 @article{conn1991globally,
   title={A globally convergent augmented Lagrangian algorithm for optimization with general constraints and simple bounds},
   author={Conn, Andrew R and Gould, Nicholas IM and Toint, Philippe},
